--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
 
   <h1>Lista Spesa</h1>
 
-  <ul id="unorderedListSpesa">
-    
-  </ul>
+  <div>
+
+    <ul id="unorderedListSpesa">
+
+    </ul>
+
+  </div>
+
+  <div>
+
+    <label>Aggiungi un elemento alla lista:</label>
+
+    <input type="text" id="nuovoElemento">
+
+    <button type="button" class="btn btn-secondary" id="buttonNuovoElemento">Aggiungi</button>
+
+  </div>
+
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
