--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <input type="text" id="nuovoElemento">
 
-    <button type="button" class="btn btn-secondary" id="buttonNuovoElemento">Aggiungi</button>
+    <button type="button" class="btn btn-dark" id="buttonNuovoElemento">Aggiungi</button>
 
   </div>
 
